src/test/ui/hygiene/globs.stderr
error[E0425]: cannot find function `f` in this scope
  --> $DIR/globs.rs:22:9
   |
LL |         f();
   |         ^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use foo::f;
   |
LL | use foo::f;
   |
LL | use foo::f;
   |

error[E0425]: cannot find function `g` in this scope
  --> $DIR/globs.rs:15:5
   |
LL |       g();
   |       ^ not found in this scope
...
LL | /     m! {
LL | |         use bar::*;
LL | |         g();
LL | |         f();
LL | |     }
   | |_____- in this macro invocation
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use bar::g;
   |
LL | use foo::test2::test::g;
   |
LL | use foo::test2::test::g;
   |
LL | use foo::test::g;
   |
and 2 other candidates

error[E0425]: cannot find function `f` in this scope
  --> $DIR/globs.rs:61:12
   |
LL | n!(f);
   | ------ in this macro invocation
...
LL |         n!(f);
   |            ^ not found in this scope

error[E0425]: cannot find function `f` in this scope
  --> $DIR/globs.rs:65:17
   |
LL | n!(f);
   | ------ in this macro invocation
...
LL |                 f
   |                 ^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
